[build-system]
requires= ["pdm-backend"]
build-backend = "pdm.backend"

[project]
requires-python = ">=3.9"
name = "cocotbext-hyperbus"
description = "COCOTB VIP for hyperbus protocol"
package-dir = "src"
classifiers = ["Development Status :: 4 - Beta",
 "Intended Audience :: Developers",
"Programming Language :: Python :: 3.8",
]
dependencies = ["cocotb"]
authors = [{name = "Meet Sangani", email = "meet.sangani@outlook.com"}]
maintainers = [{name = "Vijayvithal Jahagirdar", email = "jvs@dyumnin.com"}]
[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
[project.urls]
Homepage = "https://Dyumnin-Interns.github.io/cocotbext_hyperbus"
Repository = "https://github.com/Dyumnin-Interns/cocotbext_hyperbus.git"
Issues = "https://github.com/Dyumnin-Interns/cocotbext_hyperbus/issues"
Documentation = "https://Dyumnin-Interns.github.io/cocotbext_hyperbus"
[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
version_format = "version:format_version"

[tool.pdm.dev-dependencies]
duty = ["duty>=0.10"]
ci-quality = [
    "cocotbext_hyperbus[duty,docs,quality,typing,security]",
    "griffe>=1.5.1",
]
ci-tests = ["cocotbext_hyperbus[duty,tests]"]
docs = [
    "black>=23.9",
    "markdown-callouts>=0.3",
    "markdown-exec>=1.7",
    "mkdocs>=1.5",
    "mkdocs-coverage>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-committers-plugin-2>=1.2",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9.4",
    "mkdocs-minify-plugin>=0.7",
    "mkdocstrings[python]>=0.23",
    'tomli>=2.0; python_version < "3.11"',
]
maintain = [
    "black>=23.9",
    "blacken-docs>=1.16",
    "git-changelog>=2.3",
]
quality = [
    "ruff>=0.0",
]
tests = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.3",
    "cocotb-test"
]
typing = [
    "mypy>=1.5",
    "types-markdown>=3.5",
    "types-pyyaml>=6.0",
]
security = [
    "safety>=2.3",
]
